fix: Fix z-index fab button

--- a/projects/ng-base/base-components/components/model-form/model-form.component.scss
+++ b/projects/ng-base/base-components/components/model-form/model-form.component.scss
@@ -18,4 +18,5 @@ h2 {
   position: fixed;
   bottom: 15px;
   right: 15px;
+  z-index: 100;
 }
